Archive2/53/f2a13043229d1f/output
main.cpp: In function 'int main()':
main.cpp:5:5: error: 'vector' is not a member of 'std'
     std::vector<std::string> words = {
     ^
main.cpp:5:17: error: 'string' is not a member of 'std'
     std::vector<std::string> words = {
                 ^
main.cpp:5:30: error: 'words' was not declared in this scope
     std::vector<std::string> words = {
                              ^
main.cpp:8:5: error: 'cout' is not a member of 'std'
     std::cout << words << std::endl;
     ^
main.cpp:8:27: error: 'endl' is not a member of 'std'
     std::cout << words << std::endl;
                           ^
